# src/controllers/admin_settings.rs
@@ -1,11 +1,10 @@
-
 // User-owned controller for handler 'admin_settings'.
 
+use crate::handlers::admin_settings::{Request, Response};
 use crate::typed::TypedHandlerRequest;
-use crate::handlers::admin_settings::{ Request, Response };
 
 pub fn handle(_req: TypedHandlerRequest<Request>) -> Response {
     Response {
-        
+
     }
 }
