# src/controllers/get_item.rs
@@ -1,11 +1,10 @@
-
 // User-owned controller for handler 'get_item'.
 
+use crate::handlers::get_item::{Request, Response};
 use crate::typed::TypedHandlerRequest;
-use crate::handlers::get_item::{ Request, Response };
 
 pub fn handle(_req: TypedHandlerRequest<Request>) -> Response {
     Response {
-        
+
     }
 }
