# src/controllers/get_pet.rs
@@ -1,11 +1,10 @@
-
 // User-owned controller for handler 'get_pet'.
 
+use crate::handlers::get_pet::{Request, Response};
 use crate::typed::TypedHandlerRequest;
-use crate::handlers::get_pet::{ Request, Response };
 
 pub fn handle(_req: TypedHandlerRequest<Request>) -> Response {
     Response {
-        
+
     }
 }
