# src/controllers/get_post.rs
@@ -1,11 +1,10 @@
-
 // User-owned controller for handler 'get_post'.
 
+use crate::handlers::get_post::{Request, Response};
 use crate::typed::TypedHandlerRequest;
-use crate::handlers::get_post::{ Request, Response };
 
 pub fn handle(_req: TypedHandlerRequest<Request>) -> Response {
     Response {
-        
+
     }
 }
