# src/controllers/get_user.rs
@@ -1,11 +1,10 @@
-
 // User-owned controller for handler 'get_user'.
 
+use crate::handlers::get_user::{Request, Response};
 use crate::typed::TypedHandlerRequest;
-use crate::handlers::get_user::{ Request, Response };
 
 pub fn handle(_req: TypedHandlerRequest<Request>) -> Response {
     Response {
-        
+
     }
 }
