# src/controllers/list_users.rs
@@ -1,11 +1,10 @@
-
 // User-owned controller for handler 'list_users'.
 
+use crate::handlers::list_users::{Request, Response};
 use crate::typed::TypedHandlerRequest;
-use crate::handlers::list_users::{ Request, Response };
 
 pub fn handle(_req: TypedHandlerRequest<Request>) -> Response {
     Response {
-        
+
     }
 }
